Fixes photoswipe on mobile

--- a/images/static/css/style.css
+++ b/images/static/css/style.css
@@ -140,6 +140,14 @@ body {
 	font-size: 36px;
 }
 
+@media screen and (max-width: 800px) {
+	.img-description-layer {
+		display: none;
+		visibility: hidden;
+		clear: both;
+	}
+}
+
 .img-wrap .img-description-layer {
 	width:100%;
 	height:100%;
@@ -177,10 +185,11 @@ body {
 }
 
 .img-wrap:hover img {
-	-ms-transform:scale(1.2);
-	-webkit-transform:scale(1.2);
-	transform:scale(1.2);
+	-ms-transform: scale(1.2);
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
 }
+
 
 .img-wrap:hover .img-description-layer {
 	opacity:1;
